# arkterm

./: LICENSE  README.md  pyproject.toml
arkterm/: __init__.py  config.py  core.py  interactive.py  main.py  palette.py  terminal_utils.py
